# OnionX

./: .env  Dockerfile  README.md  app.py  package-lock.json  pyproject.toml  render.yaml  replit.md  requirements.txt  start.sh
attached_assets/: Pasted-You-are-an-expert-Python-developer-with-deep-knowledge-of-cybersecurity-tools-OSINT-and-web-app-de-1754673800293_1754673800294.txt
client/: vite.config.ts
core/: analysis_tool.py  deanonymizer.py  export_utils.py  geolocation.py  osint_tools.py  tor_connector.py
data/: sample_urls.json
utils/: progress_tracker.py  validators.py
